# heroku_rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: ENDPOINTS.md  FEATURES.md
examples/: .env.sample  Cargo.toml  README.md
examples/src/: account.rs  account_examples.rs  addon_examples.rs  app_review_examples.rs  apps.rs  apps_examples.rs  collaborators_examples.rs  config_var_examples.rs  custom_examples.rs  logs_examples.rs  macro_examples.rs  main.rs  misc_examples.rs  oauth_examples.rs  pipeline_examples.rs  spaces_examples.rs  teams.rs  teams_examples.rs  testing_examples.rs
src/: client.rs  defaults.rs  errors.rs  headers.rs  lib.rs  macros.rs  main.rs  utils.rs
src/account/: delete.rs  get.rs  patch.rs  post.rs  put.rs
src/apps/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/: mod.rs
src/endpoints/account/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/addons/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
src/endpoints/apps/: apps.rs  delete.rs  delete_apps.rs  get.rs  get_apps.rs  mod.rs  patch.rs  patch_apps.rs  post.rs  post_apps.rs
src/endpoints/builds/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/endpoints/collaborators/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
src/endpoints/config_vars/: delete.rs  get.rs  mod.rs  patch.rs
src/endpoints/custom/: mod.rs
src/endpoints/domains/: delete.rs  get.rs  mod.rs  post.rs
src/endpoints/dynos/: delete.rs  dynos.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/formations/: delete.rs  get.rs  mod.rs  patch.rs  put.rs
src/endpoints/logs/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/endpoints/misc/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/oauth/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/pipelines/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/releases/: get.rs  mod.rs  post.rs
src/endpoints/review/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/slugs/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/space/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/teams/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/testing/: get.rs  mod.rs  patch.rs  post.rs
src/framework/: apiclient.rs  auth.rs  endpoint.rs  mod.rs  reqwest_utils.rs
src/framework/response/: error.rs  mod.rs
src/macros/: mod.rs
src/teams/: delete.rs  get.rs  patch.rs  post.rs  put.rs
tests/: apps.rs  dynos.rs  main.rs  pipelines.rs  releases.rs  util.rs  utils.rs
