[package]
name = "heroku_rs"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bensadiku/heroku-rs"
description = "Rust bindings for the Heroku API"
documentation = "https://docs.rs/heroku_rs"
homepage = "https://github.com/bensadiku/heroku_rs"
keywords = ["heroku", "api", "wrapper", "rust"]
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.4"
serde_with = "1.3"
slog = "2.4"
slog-term = "2.4"
sloggers = "0.3"
url = "2.1"
percent-encoding = "1.0"
failure = "0.1.5"

[dev-dependencies]
dotenv = "0.15.0"