[package]
name = "heroku_rs"
version = "0.5.1"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bensadiku/heroku_rs"
description = "Rust bindings for the Heroku API"
documentation = "https://docs.rs/heroku_rs"
homepage = "https://github.com/bensadiku/heroku_rs"
keywords = ["heroku", "api", "wrapper", "rust"]
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
failure = "0.1.5"
serde_with = "1.3"


[features]
default = [
    "account",
    "addons",
    "apps",
    "builds",
    "collaborators",
    "config_vars",
    "custom",
    "domains",
    "dynos",
    "formations",
    "logs",
    "misc",
    "oauth",
    "pipelines",
    "releases",
    "review",
    "slugs",
    "space",
    "teams",
    "testing",
    "builder",
]

account = []
addons = []
apps = []
builds = []
collaborators = []
config_vars = []
custom = []
domains = []
dynos = []
formations = []
logs = []
misc = []
oauth = []
pipelines = []
releases = []
review = []
slugs = []
space = []
teams = []
testing = []

builder = []

[dev-dependencies]
dotenv = "0.15.0"