[package]
name = "example01"
version = "0.2.0"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example01"
path = "src/main.rs"

[dependencies]
heroku_rs = { path = "../", default-features = true }
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
dotenv = "0.14.0"