[package]
name = "example01"
version = "0.3.0"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example01"
path = "src/main.rs"

[dependencies]
heroku_rs = { path = "../", default-features = true }
dotenv = "0.15.0"