[package]
name = "example01"
version = "0.5.5"
authors = ["Behxhet Sadiku <bensadiku65@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example01"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.3"

[dependencies.heroku_rs]
default-features = true
path =  "../" 